# pycmdc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pycmdc.py  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml  publish.yml  release.yml
cmdc/: __init__.py  cli.py  config_manager.py  file_browser.py  output_handler.py  utils.py
tests/: test_cli.py  test_config_manager.py  test_file_browser.py  test_output_handler.py  test_utils.py
