[project]
name = "pycmdc"
version = "0.1.0"
description = "An interactive CLI tool for browsing, selecting, and extracting file contents with a rich tree view and intuitive navigation."
authors = [
    {name = "0xmrwn", email = "niches-anode0k@icloud.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "typer>=0.15.1,<0.16.0",
    "rich>=13.9.4,<14.0.0",
    "inquirerpy>=0.3.4,<0.4.0",
    "pyperclip>=1.9.0,<2.0.0",
    "toml>=0.10.2,<0.11.0",
]

[project.scripts]
cmdc = "pycmdc:app" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
